--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		  <!-- Tab panes -->
 		  <div class="tab-content">
 
-			<div class="tab-pane" id="home">
+			<div class="tab-pane active" id="home">
 				<div role="form">
 					<div class="form-horizontal row">
 						<div class="col-sm-12">
@@ -75,8 +75,8 @@
 					  	<div class="row" data-show-req="hero-setup-auto">
 					  		<label class="col-sm-2 control-label" data-hide-req="hero-hide">How many heroes?</label>
 					  		<div class="col-sm-10">
-						  		<input type="number" data-output="hero_count" min="2" value="2" step="2" data-show-req="hero-tile hero-setup-auto">
-						  		<input class="hidden" type="number" data-output="hero_count" min="1" value="1" data-show-req="hero-single hero-setup-auto">
+						  		<input type="number" data-output="hero_count" min="0" value="2" step="2" data-show-req="hero-tile hero-setup-auto">
+						  		<input class="hidden" type="number" data-output="hero_count" min="0" value="1" data-show-req="hero-single hero-setup-auto">
 						  	</div>
 					  	</div>
 
@@ -136,7 +136,7 @@
 					<!-- Get code for Home -->
 					<div class="row clearfix">
 						<div class="col-sm-8 col-sm-offset-2">
-							<h3>Hit the 'Get code' button and copy your code from below</h3>
+							<h4>Press 'Get code' to output your code for the Home Page</h4>
 							<textarea id="home-output" class="form-control code-output marg-btm" style="height: 150px;"></textarea>
 							<button type="button" class="btn btn-primary btn-lg js-convert-trigger">Get code</button>
 						</div>
@@ -144,7 +144,7 @@
 				</div>
 			</div> <!-- #home -->
 
-			<div class="tab-pane active" id="category">
+			<div class="tab-pane" id="category">
 				<div role="form">
 					<div class="form-horizontal row">
 						<div class="col-sm-12">
@@ -242,8 +242,8 @@
 					<!-- Get code for Category -->
 					<div class="row clearfix">
 						<div class="col-sm-8 col-sm-offset-2">
-							<h3>Hit the 'Get code' button and copy your code from below</h3>
-							<textarea id="home-output" class="form-control code-output marg-btm" style="height: 150px;"></textarea>
+							<h4>Press 'Get code' to output your code for the Category Page</h4>
+							<textarea id="cat-output" class="form-control code-output marg-btm" style="height: 150px;"></textarea>
 							<button type="button" class="btn btn-primary btn-lg js-convert-trigger">Get code</button>
 						</div>
 					</div>
@@ -251,7 +251,134 @@
 			</div> <!-- #category -->
 			
 			<div class="tab-pane" id="product">
-				<h1>Product Page Settings</h1>
+				<div role="form">
+					<div class="form-horizontal row">
+						<div class="col-sm-12">
+							<div class="row">
+								<h2 class="col-sm-10 col-sm-offset-2">Product Settings</h2>
+							</div>
+
+							<!-- Banner layouts -->
+					  	<div class="form-group js-form-group row banner-setup">
+					  		<h4 class="col-sm-10 col-sm-offset-2">Mobile Banners</h4>
+							 	<label class="col-sm-2 control-label">Banner Setup</label>
+							 	<div class="col-sm-10">
+						 		 	<label class="radio-inline js-update-ui">
+						 				<input type="radio" name="prod-banner-setup" data-output="banner_setup" value="image" data-req-name="prod-banner-image" checked> Image
+						 		 	</label>
+						 		 	<label class="radio-inline js-update-ui">
+						 				<input type="radio" name="prod-banner-setup" data-output="banner_setup" data-req-name="prod-banner-text" value="text"> Text
+						 		 	</label>
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row" data-show-req="prod-banner-image">
+							 	<label class="col-sm-2 control-label">URL</label>
+							 	<div class="col-sm-8">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Custom URL" value="">
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row" data-show-req="prod-banner-image">
+							 	<label class="col-sm-2 control-label">Image</label>
+							 	<div class="col-sm-8">
+						 		 	<input data-output="banner_img" type="text" class="form-control" placeholder="Custom Image">
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
+							 	<label class="col-sm-2 control-label">URL</label>
+							 	<div class="col-sm-8">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Custom URL">
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
+							 	<label class="col-sm-2 control-label">Title Text</label>
+							 	<div class="col-sm-8">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Title Text (Optional)">
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
+							 	<label class="col-sm-2 control-label">Normal Text</label>
+							 	<div class="col-sm-8">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Normal Text (Optional)">
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
+							 	<label class="col-sm-2 control-label">Disclaimer Text</label>
+							 	<div class="col-sm-8">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Disclaimer Text (Optional)">
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
+							 	<label class="col-sm-2 control-label">Title Color</label>
+							 	<div class="col-sm-8">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Title Color (optional, defaults to brand colors)">
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
+							 	<label class="col-sm-2 control-label">Text Color</label>
+							 	<div class="col-sm-8">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Text Color (optional, defaults to brand colors)">
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
+							 	<label class="col-sm-2 control-label">Disclaimer Color</label>
+							 	<div class="col-sm-8">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Disclaimer Color (optional, defaults to brand colors)">
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row hidden" data-show-req="prod-banner-text">
+							 	<label class="col-sm-2 control-label">Background color</label>
+							 	<div class="col-sm-8">
+						 		 	<input data-output="banner_url" type="text" class="form-control" placeholder="Background Color (optional, defaults to brand colors)">
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row banner-setup">
+					  		<h4 class="col-sm-10 col-sm-offset-2">Product Options</h4>
+							 	<label class="col-sm-2 control-label">Checkout Modal</label>
+							 	<div class="col-sm-10">
+						 		 	<label class="radio-inline js-update-ui">
+						 				<input type="radio" name="keep-shopping-modal" data-output="keep_shopping_modal" value="no" checked> Sends user to cart automatically
+						 		 	</label>
+						 		 	<label class="radio-inline js-update-ui">
+						 				<input type="radio" name="keep-shopping-modal" data-output="keep_shopping_modal" value="yes"> Show modal
+						 		 	</label>
+							 	</div>
+					  	</div>
+
+					  	<div class="form-group js-form-group row banner-setup">
+							 	<label class="col-sm-2 control-label">Clickable Product Image Overlay</label>
+							 	<div class="col-sm-10">
+						 		 	<label class="radio-inline js-update-ui">
+						 				<input type="radio" name="image-overlay" data-output="product_image_overlay" value="no" checked> No overlay
+						 		 	</label>
+						 		 	<label class="radio-inline js-update-ui">
+						 				<input type="radio" name="image-overlay" data-output="product_image_overlay" value="yes"> Show larger product image in overlay
+						 		 	</label>
+							 	</div>
+					  	</div>
+
+				  	</div>
+			  	</div>
+
+					<!-- Get code for Product -->
+					<div class="row clearfix">
+						<div class="col-sm-8 col-sm-offset-2">
+							<h4>Press 'Get code' to output your code for the Product Page</h4>
+							<textarea id="product-output" class="form-control code-output marg-btm" style="height: 150px;"></textarea>
+							<button type="button" class="btn btn-primary btn-lg js-convert-trigger">Get code</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	  <div class="page-footer" style="height: 60px"></div>
