Use minimized js

--- a/index.html
+++ b/index.html
@@ -434,6 +434,6 @@
 	 <!-- Include all compiled plugins (below), or include individual files as needed -->
 	 <script src="_assets/bootstrap/js/bootstrap.min.js"></script>
 	 <script src="_assets/js/handlebars-v1.1.2.js"></script>
-	 <script src="_assets/js/main.js"></script>
+	 <script src="_assets/js/main.min.js"></script>
   </body>
 </html>
