--- a/index.html
+++ b/index.html
@@ -34,13 +34,10 @@
 				<div role="form">
 					<div class="form-horizontal row">
 						<div class="col-sm-12">
-							<div class="row">
-								<h2 class="col-sm-10 col-sm-offset-2">Home Page Settings</h2>
-							</div>
 
 							<!-- Hero layouts -->
-					  	<div class="form-group js-form-group row hero-layouts">
-				  			<h4 class="col-sm-10 col-sm-offset-2">Heroes</h4>
+					  	<div class="form-group js-form-group row hero-layouts marg-top">
+				  			<h3 class="col-sm-10 col-sm-offset-2">Home Page Heroes</h3>
 							 	<label class="col-sm-2 control-label">Hero Layouts</label>
 							 	<div class="col-sm-10">
 						 		 	<label class="radio-inline js-update-ui">
@@ -115,11 +112,9 @@
 				  	</div>
 
 				  	<!-- Show body nav -->
-				  	<div class="col-sm-12">
-				  		<div class="form-group">
-				  			<h4 class="col-sm-10 col-sm-offset-2">Navigation</h4>
-				  		</div>
+				  	<div class="col-sm-12 marg-top">
 				  		<div class="row form-group js-form-group">
+				  			<h3 class="col-sm-10 col-sm-offset-2">Home Page Navigation</h3>
 			  				<label class="col-sm-2 control-label">Show Body Nav</label>
 			  				<div class="col-sm-10">
 			  				 	<label class="radio-inline">
@@ -148,13 +143,10 @@
 				<div role="form">
 					<div class="form-horizontal row">
 						<div class="col-sm-12">
-							<div class="row">
-								<h2 class="col-sm-10 col-sm-offset-2">Category Settings</h2>
-							</div>
 
 							<!-- Banner layouts -->
-					  	<div class="form-group js-form-group row banner-setup">
-					  		<h4 class="col-sm-10 col-sm-offset-2">Mobile Banners</h4>
+					  	<div class="form-group js-form-group row banner-setup marg-top">
+					  		<h3 class="col-sm-10 col-sm-offset-2">Category Banners</h3>
 							 	<label class="col-sm-2 control-label">Banner Setup</label>
 							 	<div class="col-sm-10">
 						 		 	<label class="radio-inline js-update-ui">
@@ -254,13 +246,10 @@
 				<div role="form">
 					<div class="form-horizontal row">
 						<div class="col-sm-12">
-							<div class="row">
-								<h2 class="col-sm-10 col-sm-offset-2">Product Settings</h2>
-							</div>
 
 							<!-- Banner layouts -->
-					  	<div class="form-group js-form-group row banner-setup">
-					  		<h4 class="col-sm-10 col-sm-offset-2">Mobile Banners</h4>
+					  	<div class="form-group js-form-group row banner-setup marg-top">
+					  		<h3 class="col-sm-10 col-sm-offset-2">Product Banners</h3>
 							 	<label class="col-sm-2 control-label">Banner Setup</label>
 							 	<div class="col-sm-10">
 						 		 	<label class="radio-inline js-update-ui">
@@ -343,7 +332,7 @@
 					  	</div>
 
 					  	<div class="form-group js-form-group row banner-setup">
-					  		<h4 class="col-sm-10 col-sm-offset-2">Product Options</h4>
+					  		<h3 class="col-sm-10 col-sm-offset-2">Product Options</h3>
 							 	<label class="col-sm-2 control-label">Checkout Modal</label>
 							 	<div class="col-sm-10">
 						 		 	<label class="radio-inline js-update-ui">
