--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
 
 
 					  	<!-- Hero number select -->
-					  	<div class="row" data-show-req="hero-setup-auto">
+					  	<div class="row" data-show-req="hero-setup-auto hero-tile">
 					  		<label class="col-sm-2 control-label" data-hide-req="hero-hide">How many heroes?</label>
 					  		<div class="col-sm-10">
 						  		<input type="number" data-output="hero_count" min="0" value="2" step="2" data-show-req="hero-tile hero-setup-auto">
-						  		<input class="hidden" type="number" data-output="hero_count" min="0" value="1" data-show-req="hero-single hero-setup-auto">
 						  	</div>
 					  	</div>
 
 					  	<!-- Hero repeaters -->
 					  	<div data-output="hero-repeaters" class="clearfix marg-btm hidden" data-hide-req="hero-setup-auto">
 					  		<div class="row" data-hide-req="hero-hide">
-						  		<h4 class="col-sm-10 col-sm-offset-2">Add custom heroes</h4>
+						  		<h4 class="col-sm-10 col-sm-offset-2" data-show-req="hero-tile hero-setup-custom">Add custom heroes</h4>
+						  		<h4 class="col-sm-10 col-sm-offset-2" data-show-req="hero-single hero-setup-custom">Single custom hero</h4>
 						  	</div>
 
 						  	<!-- Tile heroes -->
@@ -99,14 +99,6 @@
 				  	  	<!-- Single heroes -->
 				  	  	<div class="hidden" data-show-req="hero-single hero-setup-custom">
 				  	  		<div id="home-hero-single" class="js-add-row" data-template="hero-single-template"></div>
-				  	  		<div class="row">
-				  	  			<div class="col-sm-8 col-sm-offset-2">
-				  	  				<p><em>Total heroes:</em> <span class="hero-count"></span></p>
-				  	  			</div>
-			  	  				<div class="col-sm-2">
-				  	  				<button type="button" class="btn btn-primary btn-sm btn-info js-add-row-trigger pull-right" data-target="home-hero-single">Add row</button>
-				  	  			</div>
-				  	  		</div>
 				  	  	</div>
 					  	</div>
 				  	</div>
@@ -404,10 +396,7 @@
 		</script>
 		<script id="hero-single-template" type="text/x-handlebars-template">
 			<div class="row">
-				<div class="col-sm-2">
-					<button type="button" class="btn btn-danger btn-xs pull-right js-delete-row">&times;</button>
-				</div>
-				<div class="hero col-sm-10">
+				<div class="hero col-sm-10 col-sm-offset-2">
 		    	<label>Image</label>
 		    	<input data-output="hero-image" type="text" class="form-control" placeholder="Link to image">
 		    	<label>Title</label>
