Add more options info

--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@
 							<button type="button" class="btn btn-primary btn-lg js-convert-trigger">Get code</button>
 						</div>
 					</div>
+
+					<!-- CTA Buttons & Links Info -->
+					<div class="row marg-top">
+						<div class="well col-sm-8 col-sm-offset-2 marg-top text-info form-group">
+							<h4 class="text-center">More options</h4>
+							<h5>CTA Buttons</h5>
+							<p>Adding a class of <strong>cta_button</strong> to any link on the homepage will create a button below the hero (ala FNM&rsquo;s blue buttons)</p>
+
+							<h5>CTA Links</h5>
+							<p>Adding a class of <strong>cta_link</strong> to any link on the homepage will create a link below CTA Buttons and/or Hero (ala left nav on Cheryls)</p>
+
+							<h5>Hide Nav Links</h5>
+							<p>Add a class of <strong>hide_from_mobile</strong></p>
+						</div>
+					</div>
 				</div>
 			</div> <!-- #home -->
 
