Update hero count input

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
 					  	<!-- Hero number select -->
 					  	<div class="row" data-show-req="hero-setup-auto hero-tile">
-					  		<label class="col-sm-2 control-label" data-hide-req="hero-hide">How many heroes?</label>
+					  		<label class="col-sm-2 control-label" data-hide-req="hero-hide">How many auto heroes?</label>
 					  		<div class="col-sm-10">
-						  		<input type="number" data-output="hero_count" min="0" value="2" step="2" data-show-req="hero-tile hero-setup-auto">
+						  		<input type="number" data-output="hero_count" min="2" value="2" step="2" data-show-req="hero-tile hero-setup-auto">
 						  	</div>
 					  	</div>
 
